--- a/app/project/src/css/core.css
+++ b/app/project/src/css/core.css
@@ -1,20 +1,3 @@
-/* ====================================================
-
-	File Name: Core CSS (core.css)
-	Description: Core stylesheet for Canvas
-	Author: Donny Burnside
-	Author URI: http://www.donnyburnside.com
-	Version: 1.0.0
-	License: GNU General Public License v3.0
-	License URI: http://www.gnu.org/licenses/gpl.html
-
-	Canvas - A Free Website Template by Donny Burnside
-	Copyright 2015 Donny Burnside
-	Distributed under the terms of the GNU GPL
-
-	For help and support please visit http://www.donnyburnside.com
-
-   ==================================================== */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, input {
 	margin:0;
 	padding:0;
@@ -1302,7 +1285,10 @@ input[type="cancel"] {
 	margin-top:2rem;
 }
 
-
+.article-creation{
+	width: 50px;
+	margin: 0 auto;
+}
 
 /* ====================================================
 	11. Author
